--- a/index.html
+++ b/index.html
@@ -13,24 +13,23 @@
 
         </header>
 
-        <jumbotron>
+        <div class="jumbotron">
 
-        </jumbotron>
+        </div>
 
         <main>
-            <div class="top-bar">
-
-            </div>
-            <div class="mid">
-                <div class="left-content">
+            <div class="mid clearfix">
+                <div class="top-bar">
+    
+                </div>
+                <div class="left-content left">
 
                 </div>
-                <div class="center-content">
+                <div class="center-content left">
 
                 </div>
-                <div class="right-content"></div>
+                <div class="left-content left"></div>
             </div>
-
         </main>
 
         <footer>
